# myunet

./: .gitignore  README.md  model.ipynb  model.py  pyproject.toml
src/myunet/: __init__.py
