[project]
name = "myunet"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Chase Hadley", email = "me@chadley.me" }
]
dependencies = [
    "tensorflow~=2.12.0",
    "tqdm~=4.65.0",
    "scikit-image~=0.20.0",
    "matplotlib~=3.7.1",
    "jupyterlab~=4.0.1",
    "tensorflow-addons~=0.20.0", "jupyterlab-widgets~=3.0.7", "ipywidgets~=8.0.6", "keras-rl2~=1.0.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
